// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Binary invalid renders correctly 1`] = `
<fieldset
  aria-describedby="helper-id-1"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label ecl-form-label--invalid"
  >
    Do you need help?
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="helper-id-1"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-feedback-message"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--warning"
      />
    </svg>
        Error message for the group
  </div>
  <div
    class="ecl-radio ecl-radio--binary"
  >
    <input
      checked=""
      class="ecl-radio__input"
      id="radio-binary-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="yes"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-1"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Yes
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--binary"
  >
    <input
      class="ecl-radio__input"
      id="radio-binary-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="no"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-2"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      No
    </label>
  </div>
</fieldset>
`;

exports[`Radio Binary renders correctly 1`] = `
<fieldset
  aria-describedby="helper-id-1"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label"
  >
    Do you need help?
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="helper-id-1"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-radio ecl-radio--binary"
  >
    <input
      checked=""
      class="ecl-radio__input"
      id="radio-binary-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="yes"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Yes
    </label>
  </div>
  <div
    class="ecl-radio ecl-radio--binary"
  >
    <input
      class="ecl-radio__input"
      id="radio-binary-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="no"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      No
    </label>
  </div>
</fieldset>
`;

exports[`Radio Default renders correctly 1`] = `
<fieldset
  aria-describedby="helper-id-1"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label"
  >
    Select your country
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="helper-id-1"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Luxembourg
    </label>
    <div
      class="ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Belgium
    </label>
    <div
      class="ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      required=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-radio__help ecl-radio__help--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Radio Default renders correctly with extra attributes 1`] = `
<fieldset
  aria-describedby="helper-id-1"
  class="ecl-form-group"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <legend
    class="ecl-form-label"
  >
    Select your country
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="helper-id-1"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Luxembourg
    </label>
    <div
      class="ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Belgium
    </label>
    <div
      class="ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      required=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-radio__help ecl-radio__help--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Radio Default renders correctly with extra class names 1`] = `
<fieldset
  aria-describedby="helper-id-1"
  class="ecl-form-group custom-class custom-class--test"
>
  <legend
    class="ecl-form-label"
  >
    Select your country
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="helper-id-1"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Luxembourg
    </label>
    <div
      class="ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Belgium
    </label>
    <div
      class="ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      required=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-radio__help ecl-radio__help--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Radio Invalid renders correctly 1`] = `
<fieldset
  aria-describedby="helper-id-1"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label ecl-form-label--invalid"
  >
    Select your country
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="helper-id-1"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--warning"
      />
    </svg>
        This is the error message
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      required=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Luxembourg
    </label>
    <div
      class="ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      required=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Belgium
    </label>
    <div
      class="ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      required=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled ecl-radio__box--invalid"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-radio__help ecl-radio__help--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`Radio Optional renders correctly 1`] = `
<fieldset
  aria-describedby="helper-id-1"
  class="ecl-form-group"
>
  <legend
    class="ecl-form-label"
  >
    Select your country
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </legend>
  <div
    class="ecl-help-block"
    id="helper-id-1"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-default-1"
      name="radio-group-1"
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Luxembourg
    </label>
    <div
      class="ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-default-2"
      name="radio-group-1"
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      Belgium
    </label>
    <div
      class="ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name="radio-group-1"
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label ecl-radio__label--disabled"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      >
        <span
          class="ecl-radio__box-inner"
        />
      </span>
      France (disabled)
    </label>
    <div
      class="ecl-radio__help ecl-radio__help--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;
